--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon index.js"
+        "server": "nodemon index.js",
+        "client": "npm run start --prefix ../client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bcrypt-nodejs": "^0.0.3",
         "body-parser": "^1.20.2",
+        "concurrently": "^8.0.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "jwt-simple": "^0.5.6",
@@ -18,6 +21,7 @@
         "morgan": "^1.10.0",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0"
     }
